--- a/examples/falling-ball/index.html
+++ b/examples/falling-ball/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>p5.js + Matter</title>
+    <title>Falling Ball | p5-matter</title>
   </head>
   <body>
 
-    <script src="/bower_components/p5.js/lib/p5.min.js"></script>
-    <script src="/bower_components/Matter/build/matter.min.js"></script>
+    <script src="/node_modules/p5/lib/p5.min.js"></script>
+    <script src="/node_modules/matter-js/build/matter.min.js"></script>
     <script src="/scripts/p5-matter.js"></script>
     <script src="/examples/falling-ball/falling-ball.js"></script>
   </body>
