rename some files

--- a/examples/tilted-platform/index.html
+++ b/examples/tilted-platform/index.html
@@ -8,7 +8,7 @@
 
     <script src="/node_modules/p5/lib/p5.min.js"></script>
     <script src="/node_modules/matter-js/build/matter.min.js"></script>
-    <script src="/scripts/p5-matter.js"></script>
+    <script src="/src/p5-matter.js"></script>
     <script src="/examples/tilted-platform/tilted-platform.js"></script>
   </body>
 </html>
