--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 
     <script src="PATH_TO_P5.js"></script>
     <script src="PATH_TO_MATTER.js"></script>
-    <script src="/scripts/p5-matter.js"></script>
+    <script src="/src/p5-matter.js"></script>
     <script src="PATH_TO_YOUR_SCRIPT.js>"></script>
   </body>
 </html>
