--- a/examples/simple-platform/index.html
+++ b/examples/simple-platform/index.html
@@ -8,7 +8,7 @@
 
     <script src="/p5-matter/node_modules/p5/lib/p5.min.js"></script>
     <script src="/p5-matter/node_modules/matter-js/build/matter.min.js"></script>
-    <script src="/src/p5-matter.js"></script>
+    <script src="/p5-matter/src/p5-matter.js"></script>
     <script src="/examples/simple-platform/simple-platform.js"></script>
   </body>
 </html>
