update dependency paths

--- a/examples/throw-block/index.html
+++ b/examples/throw-block/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
 
-    <script src="/p5-matter/node_modules/p5/lib/p5.min.js"></script>
-    <script src="/p5-matter/node_modules/matter-js/build/matter.min.js"></script>
+    <script src="/p5-matter/vendor/p5.min.js"></script>
+    <script src="/p5-matter/vendor/matter.min.js"></script>
     <script src="/p5-matter/src/p5-matter.js"></script>
     <script src="/p5-matter/examples/throw-block/throw-block.js"></script>
   </body>
