--- a/examples/flappy-bird/index.html
+++ b/examples/flappy-bird/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
 
-    <script src="/node_modules/p5/lib/p5.min.js"></script>
-    <script src="/node_modules/matter-js/build/matter.min.js"></script>
-    <script src="/src/p5-matter.js"></script>
-    <script src="/examples/flappy-bird/flappy-bird.js"></script>
+    <script src="/p5-matter/vendor/p5.min.js"></script>
+    <script src="/p5-matter/vendor/matter.min.js"></script>
+    <script src="/p5-matter/src/p5-matter.js"></script>
+    <script src="/p5-matter/examples/flappy-bird/flappy-bird.js"></script>
   </body>
 </html>
